[tool.poetry]
name = "cipher_jc5492"
version = "0.1.0"
description = "MDS HW7 jc5492"
authors = ["Jian Tong Chua"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
